--- a/exchange.html
+++ b/exchange.html
@@ -414,7 +414,7 @@ inputBar.classList.toggle('show');
    
 </header>
 <section class="policy">
-    <div class="container" style="padding: 100px;">
+    <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <h1 class="policy-title">Exchange & Returns Policy</h1>
