--- a/ourstory.html
+++ b/ourstory.html
@@ -413,7 +413,7 @@ inputBar.classList.toggle('show');
         </script>
    
 </header>
-<section class="our-story" style="padding: 100px; ">
+<section class="our-story" >
     <div class="container">
         <div class="row">
             <div class="col-md-12">
